
Changelog
=========

1.7.5 (unreleased)
------------------

Nothing yet.

1.7.4 (2014-04-24)
------------------

- Fix fuzzy search.
  [msom]

- Add zoom to location on map functionality again.
  [msom]

1.7.3 (2014-04-10)
------------------

- Make the circles in the collective geo maps more visible again.
  [msom]

1.7.2 (2014-02-05)
------------------

- No longer fix the width of the search/filter viewlet in python. This will
  impact the style of existing themes, except for plonetheme.onegov.
  [href]

- Integrate seantis.plonetools.
  [href]

- Fixes geo customstyles not returning a value.
  [href]

1.7.1 (2014-01-22)
------------------

- Switching between locked/unlocked categories no longer results in ability
  to save an item. Fixes #11.
  [href]

- No longer trigger a transaction on a simple read-only view request. Fixes #9.
  [href]

1.7 (2013-11-21)
----------------

- Upgrade to latest collective.geo releases. Please note that an upgrade step
  is necessary for each module using seantis.dir.base. Implemented as follows:

  https://github.com/seantis/seantis.dir.contacts/commit/02c18f8f10fb20ac1610d94204e7ff753bfbaadf
  (note that the release is 1.7 instead of 1.6)

- Adds category values to extended data if collective.geo.fastkml is installed.
  Use seantis.dir.base[extended_data] to install. Collective.geo.fastkml will
  be merged into collective.geo.kml in the future at which point this feature
  will no longer be optional.

1.6.1 (2013-06-16)
------------------
- Adds seantis-directory-all, seantis-directory-results or
  seantis-directory-items to all directory views' body class. This allows
  for easier styling of different seantis.dir.* modules.

1.6 (2013-09-12)
----------------
- Removes almost all css styles - it's the job of seantis.dir.* packages to
  look shiny.
- Removes fieldset/legend from directory search
- Adds category values to extended data if collective.geo.fastkml is installed.